# dragonfly-toolkit

./: .gitignore  README.md  make.ps1  pyproject.toml  requirements.in  requirements.txt
.github/: CODEOWNERS  dependabot.yaml
.github/workflows/: dependency-review.yaml  github-pages-python-sphinx.yaml  precommit-autoupdate.yaml  python-ci.yaml
docs/source/: changelog.rst  conf.py  index.rst
requirements/: requirements-dev.in  requirements-dev.txt  requirements-docs.in  requirements-docs.txt  requirements-tests.txt  requirements.in  requirements.txt
src/dragonfly_cli/: __init__.py  __main__.py  app.py  commands_pypi.py  package_commands.py
src/dragonfly_lib/: __init__.py  constants.py  files.py
src/dragonfly_tui/: __init__.py  __main__.py  app.py  code_browser.css
tests/dragonfly_cli/: test_cli.py
