[project]
name = "dragonfly-toolkit"
version = "0.1.0"
dynamic = ["dependencies"]

[project.urls]
repository = "https://github.com/vipyrsec/dragonfly-toolkit"
documentation = "https://docs.vipyrsec.com/dragonfly-toolkit/"

[project.optional-dependencies]
dev = [
    "pip-tools",
    "pre-commit",
    "black",
    "isort",
    "ruff",
]
tests = [
    "pytest",
]
docs = [
    "sphinx",
    "furo",
    "sphinx-autoapi",
    "releases",
]

[project.scripts]
dragonfly = "dragonfly_cli.app:app"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic.dependencies]
file = ["requirements.txt"]

[tool.black]
target-version = ["py311"]
line-length = 120

[tool.ruff]
select = ["ALL"]
ignore = [
  "PLC0414", # (Import alias does not rename original package) - Re-exporting
]
target-version = "py311"
line-length = 120

[tool.ruff.isort]
known-first-party = ["letsbuilda.pypi"]

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
addopts = "tests -r a -v --doctest-modules src"
