[project]
name = "dragonfly-toolkit"
version = "0.1.0"
dynamic = ["dependencies", "optional-dependencies"]

[project.urls]
repository = "https://github.com/vipyrsec/dragonfly-toolkit"
documentation = "https://docs.vipyrsec.com/dragonfly-toolkit/"

[project.scripts]
dragonfly = "dragonfly_cli.app:app"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic.dependencies]
file = ["requirements.txt"]

[tool.setuptools.dynamic.optional-dependencies]
dev = { file = ["requirements/requirements-dev.txt"] }
tests = { file = ["requirements/requirements-tests.txt"] }
docs = { file = ["requirements/requirements-docs.txt"] }

[tool.black]
target-version = ["py311"]
line-length = 120

[tool.ruff]
select = ["ALL"]
ignore = [
  "PLC0414", # (Import alias does not rename original package) - Re-exporting
  "UP007", # (Use `X | Y` for type annotations) - Click doesn't support these
]
target-version = "py311"
line-length = 120

[tool.ruff.isort]
known-first-party = ["letsbuilda.pypi"]

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
addopts = "tests -r a -v --doctest-modules src"
